src/test/deca/syntax/parser/invalid/decl_var_type_string.deca
// Parser test, type unavailable (string)

{
    "int" x = 5;
}